Fixed spacing in welcome page

--- a/demo/static/demo/welcome/style.css
+++ b/demo/static/demo/welcome/style.css
@@ -39,3 +39,7 @@
   max-height: 300px;
   margin-top: 40px;
 }
+
+.title {
+  margin-bottom: 10px;
+}
